--- a/lab4/styles.css
+++ b/lab4/styles.css
@@ -7,8 +7,8 @@ body {
 	background-repeat: no-repeat;
 	background-size: cover;
 	background-blend-mode: lighten;
-	background-attachment: fixed; /* Фиксирует фон */
-    min-height: 100vh; /* Убедитесь, что фон занимает всю высоту экрана */
+	background-attachment: fixed;
+    min-height: 100vh;
 	display: flex; 
 	flex-direction: column;
 }
@@ -18,6 +18,10 @@ header {
     color: #fff;
     padding: 10px 0;
     text-align: center;
+}
+
+header h1 {
+	margin: 0;
 }
 
 nav ul {
@@ -39,9 +43,8 @@ nav ul li a {
 
 main {
     padding: 20px;
-    padding-bottom: 80px; /* Добавляем отступ внизу для футера */
+    padding-bottom: 80px;
 	flex: 1;
-	padding: 20px;
 	display: flex;
 	flex-direction: column;
 	align-items: center;
@@ -98,12 +101,12 @@ th:nth-child(3), td:nth-child(3) {
 	box-sizing: border-box;
 }
 
-#mainpic {
+/* #mainpic {
 	display: block;
 	margin: 0 auto;
 	padding-bottom: 20px;
 	width: 40%;
-}
+} */
 
 h2 {
 	text-shadow:      
@@ -146,4 +149,52 @@ main ul li::before {
 
 .tips li:hover {
 	transform: scale(1.05);
+}
+
+#indexpage .gallery {
+	display: grid;
+	grid-template-columns: repeat(8, 1fr);
+	grid-template-rows:  repeat(auto-fit, 1fr);
+	row-gap: 0px;
+	column-gap: 0px;
+	align-items: center;
+	justify-items: center;
+}
+
+#indexpage .gallery img {
+	width: 100%;
+	height: 100%;
+}
+
+#indexpage .gallery #mainpic {
+	width: 100%;
+	height: 100%;
+	grid-area: 3 / 3 / 7 / 7;
+}
+
+#indexpage {
+	display: grid;
+	grid-template-columns: auto;
+	grid-template-rows: auto auto auto;
+	align-items: center;
+	justify-items: center;
+}
+
+#indexpage header {
+	grid-row: 1;
+	grid-column: 1;
+	align-self: self-start;
+	width: 100%;
+}
+
+#indexpage main {
+	grid-row: 2;
+	grid-column: 1;
+	align-self: self-start;
+}
+
+#indexpage footer {
+	grid-row: 3;
+	grid-column: 1;
+	align-self: self-end;
 }
